# Lysozyme_in_water

./: .gitignore  README.md
gromacs_BBs/: README.md  deploy_in_mahti.sh  deploy_in_mn4.sh  install_BBs.sh  setup.cfg  uninstall.sh  uninstall_BBs.sh  update.sh
gromacs_BBs/add_solvate/: README.md  setup.py  uninstall.sh
gromacs_BBs/add_solvate/src/add_solvate_BB/: __init__.py  __main__.py  definition.json  definitions.py  main.py
gromacs_BBs/assemble_tpr/: README.md  setup.py  uninstall.sh
gromacs_BBs/assemble_tpr/src/assemble_tpr_BB/: __init__.py  __main__.py  definition.json  definitions.py  main.py
gromacs_BBs/define_box/: README.md  setup.py  uninstall.sh
gromacs_BBs/energy_analysis/: README.md  setup.py  uninstall.sh
gromacs_BBs/energy_minimization/: README.md  setup.py  uninstall.sh
gromacs_BBs/equilibrate/: README.md  setup.py  uninstall.sh
gromacs_BBs/generate_topology/: README.md  setup.py  uninstall.sh
gromacs_BBs/image/: gromacs.def
gromacs_BBs/replace_solvent_with_ions/: README.md  setup.py  uninstall.sh
gromacs_BBs/src/add_solvate/: __init__.py  __main__.py  main.py
gromacs_BBs/src/assemble_tpr/: __init__.py  __main__.py  main.py
gromacs_BBs/src/define_box/: __init__.py  __main__.py  main.py
gromacs_BBs/src/energy_analysis/: __init__.py  __main__.py  main.py
gromacs_BBs/src/energy_minimization/: __init__.py  __main__.py  main.py
gromacs_BBs/src/generate_topology/: __init__.py  __main__.py  main.py
gromacs_BBs/src/gromacs_BBs_commons/: image.py
gromacs_BBs/src/replace_solvent_with_ions/: __init__.py  __main__.py  main.py
(+47 files in other folders)
