[metadata]
name = gromacs_BBs
version = 0.0.1
author = Author
author_email = author@example.com
description = This package provides the a set of Building Blocks for gromacs.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/PerMedCoE/gromacs_BB
project_urls =
    Bug Tracker = https://github.com/pypa/PerMedCoE/issues
classifiers =
    Programming Language :: Python :: 3
    Development Status :: 1 - Planning
    Intended Audience :: Science/Research
    Operating System :: Unix
    Operating System :: POSIX :: Linux
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Medical Science Apps.

[options]
package_dir=
    =src
packages=find:
python_requires = >=3.6
install_requires = permedcoe>=0.0.1

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    add_solvate = add_solvate.__main__:main
    assemble_tpr = assemble_tpr.__main__:main
    define_box = define_box.__main__:main
    energy_analysis = energy_analysis.__main__:main
    energy_minimization = energy_minimization.__main__:main
    generate_topology = generate_topology.__main__:main
    replace_solvent_with_ions = replace_solvent_with_ions.__main__:main
